feat: add select all and clear selection buttons with functionality

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,6 +10,10 @@
 
 <body>
     <h3>Select Tabs to Save</h3>
+    <div>
+        <button id="selectAllBtn" class="btn-select">All</button>
+        <button id="clearSelectionBtn" class="btn-clear">Clear</button>
+    </div>
     <div id="tabs-list">
     </div>
     <label for="format">Select Output Format:</label>
